[gd_scene load_steps=3 format=3 uid="uid://mainmenu"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]
[ext_resource type="FontFile" path="res://assets/fonts/default_font.ttf" id="2_font"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.851, 0.729, 0.608, 1)  # Desert Sand
z_index = -10

[node name="EphodIllustration" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 200.0
offset_right = 150.0
offset_bottom = 400.0
grow_horizontal = 2

[node name="EphodBase" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.773, 0.667, 0.424, 1)  # Antique Gold
grow_horizontal = 2
grow_vertical = 2

[node name="Stone1" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0
color = Color(0.8, 0.2, 0.2, 1)  # Ruby

[node name="Stone2" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 70.0
offset_top = 20.0
offset_right = 110.0
offset_bottom = 60.0
color = Color(0.2, 0.2, 0.8, 1)  # Sapphire

[node name="Stone3" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 120.0
offset_top = 20.0
offset_right = 160.0
offset_bottom = 60.0
color = Color(0.2, 0.8, 0.2, 1)  # Emerald

[node name="Stone4" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 170.0
offset_top = 20.0
offset_right = 210.0
offset_bottom = 60.0
color = Color(1, 0.843, 0, 1)  # Gold

[node name="Stone5" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 220.0
offset_top = 20.0
offset_right = 260.0
offset_bottom = 60.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="Stone6" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 20.0
offset_top = 80.0
offset_right = 60.0
offset_bottom = 120.0
color = Color(0.2, 0.2, 0.8, 1)

[node name="Stone7" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 70.0
offset_top = 80.0
offset_right = 110.0
offset_bottom = 120.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="Stone8" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 120.0
offset_top = 80.0
offset_right = 160.0
offset_bottom = 120.0
color = Color(1, 0.843, 0, 1)

[node name="Stone9" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 170.0
offset_top = 80.0
offset_right = 210.0
offset_bottom = 120.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="Stone10" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 220.0
offset_top = 80.0
offset_right = 260.0
offset_bottom = 120.0
color = Color(0.2, 0.2, 0.8, 1)

[node name="Stone11" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 120.0
offset_top = 140.0
offset_right = 160.0
offset_bottom = 180.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="Stone12" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 170.0
offset_top = 140.0
offset_right = 210.0
offset_bottom = 180.0
color = Color(1, 0.843, 0, 1)

[node name="UrimThummim" type="ColorRect" parent="EphodIllustration"]
layout_mode = 1
offset_left = 70.0
offset_top = 140.0
offset_right = 110.0
offset_bottom = 180.0
color = Color(0.9, 0.9, 0.9, 1)  # White for Urim/Thummim

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Twelve Stones"
horizontal_alignment = 1
add_theme_color_override("font_color", Color(0.9, 0.8, 1.0, 1))
add_theme_font_override("font", ExtResource("2_font"))
add_theme_font_size_override("font_size", 32)

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 130.0
grow_horizontal = 2
text = "Ephod Quest"
horizontal_alignment = 1
add_theme_color_override("font_color", Color(0.7, 0.9, 1.0, 1))
add_theme_font_override("font", ExtResource("2_font"))
add_theme_font_size_override("font_size", 18)

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
add_theme_constant_override("separation", 12)

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue Journey"
visible = false

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start New Journey"

[node name="VerseVault" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Verse Vault"

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="Support" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Support Us"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "stone_glow"

[node name="AnimationLibrary" type="AnimationLibrary" parent="AnimationPlayer"]

[node name="stone_glow" type="Animation" parent="AnimationLibrary"]
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EphodIllustration/Stone1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.2, 1.2, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EphodIllustration/Stone2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.2, 1.2, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EphodIllustration/Stone3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.2, 1.2, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EphodIllustration/Stone4:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.2, 1.2, 1)]
}
